<resources>
    <string name="app_name" translatable="false">YourLoans</string>
    <string name="authorization_text">Authorization</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account_text">Don\'t have an account?</string>
    <string name="register_text">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="registration_text">Registration</string>
    <string name="success_registration">You are registered successfully</string>
    <string name="unauthorized_error_body">Authentication required</string>
    <string name="forbidden_error_body">You don\'t have permission to access</string>
    <string name="not_found_error_body">A resource can not be found</string>
    <string name="unknown_error_body">Oops… Something went wrong</string>
    <string name="loan_list">Loan list</string>
    <string name="account">Account</string>
    <string name="period">| %1$s days</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="percent">Percent: </string>
    <string name="period_text_field">Period: </string>
    <string name="phone_number">Phone number:</string>
    <string name="create_a_request">Create a request</string>
    <string name="conditions_available">The are conditions available for you:</string>
    <string name="conditions">At %1$s\%% for %2$s days</string>
    <string name="amount_helper_text">Maximum: %1$s</string>
    <string name="error_loading_conditions">Unable to load loan conditions: %1$s</string>
    <string name="error_creating_loan">Unable to create loan request: %1$s</string>
    <string name="money">%1$s\$</string>
    <string name="amount_label">Amount: </string>
    <string name="date_label">Date:</string>
    <string name="state">State</string>
    <string name="error_loading_loan">Error loading loan details: %1$s</string>
    <string name="approved" translatable="false">APPROVED</string>
    <string name="rejected" translatable="false">REJECTED</string>
    <string name="percent_formatted" translatable="false">%1$s\%%</string>
    <string name="period_formatted">%1$s days</string>
    <string name="success_loan_request_title">Your loan request has been successfully completed!</string>
    <string name="success_loan_request_message">Now you can watch the status of the request in the loan list.</string>
    <string name="get_loan_title">Congratulations! Now you can get a loan.</string>
    <string name="get_loan_message">Take your passport and come to our bank at the address: Musa Jalil str., 11. We will be waiting for you!</string>
    <string name="how_to_get_a_loan">How to get a loan?</string>
    <string name="page_number" translatable="false">%1$s</string>
    <string name="text_onboarding_slide_one">You can create a new loan request by clicking on the plus.</string>
    <string name="text_onboarding_slide_two">You can view the status of your requests on the main screen.</string>
    <string name="text_onboarding_slide_three">You can change the settings by clicking on the account icon below.</string>
    <string name="sign_out">Sign out</string>
    <string name="loans">Loans</string>
    <string name="loan">Loan</string>
    <string name="account_settings">Account</string>
    <string name="new_loan">New loan</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="no_internet_available">No internet available, \nplease check your connected WiFi or Mobile network</string>
    <string name="unknown_host">The host name doesn\'t exist</string>
    <string name="no_network_available">No network available, \nplease check your WiFi or Mobile network connection</string>
    <string name="socket_timeout">Timeout expired</string>
    <string name="dark_mode">Dark mode</string>
    <string name="payment">Payment</string>
    <string name="payment_notification_text">Don\'t forget to pay off your loans!</string>
    <string name="now_you_have_no_loan_requests">Now you have no loan requests!</string>
</resources>